-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
Qt Creator 13.0.0
-
None
-
dde58fbf5 (14.0), 9e3925de8 (master), 810a855b4 (master)
- Remove Copyright year/range. This is not necessary, and always have to be bumped. see also
QTBUG-121928 - Update list of registered trademarks to:
- Qt logo, axivion stopping software erosion logo, Qt Group logo,
- Qt®
- Axivion®
- avixion stopping software erosion®
- Boot to Qt®
- Built with Qt®
- Coco®
- froglogic®
- Qt Cloud Services®
- Qt Developer Days®
- Qt Embedded®
- Qt Enterprise®
- Qt Group®
- Qt Mobile®
- Qt Quick®
- Qt Quick Compiler®
- Squish®
- replace 'are registered trademarks of The Qt Company Ltd.' with 'are registered trademarks of The Qt Company Ltd. or its subsidiaries.' (You could also add a link to https://www.qt.io/trademark/)
- If non-commercial: Add something like
Qt Creator is free software, and you are welcome to redistribute it
under certain conditions.
certain conditions could link to https://www.gnu.org/licenses/gpl-3.0-standalone.html
- relates to
-
QTBUG-122683 Update trademark information
-
- Closed
-
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTCREATORBUG-30432 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 589538,5 | Unify copyright string and remove year | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |
| 589539,5 | About: Update trademark information and add OSS text | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 589573,2 | Improve display of license details | 14.0 | qt-creator/tqtc-plugin-licensechecker | Status: MERGED | +2 | 0 |