Unify copyright string and remove year

The year is not needed and requires us to update it manually each year.
So just remove it. Centralize it in the branding file to avoid changes
to be done at lots of places (About dialog, plugin specs, app info plist
& rc, docs, ...) in the future.

Task-number: QTCREATORBUG-30432
Change-Id: Ia421924c19a1331b121e765bcea137920025598d
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>