cmake/QtCreatorIDEBranding.cmake
@@ -1,7 +1,6 @@
 set(IDE_VERSION "14.0.82")                            # The IDE version.
 set(IDE_VERSION_COMPAT "14.0.82")                     # The IDE Compatibility version.
 set(IDE_VERSION_DISPLAY "15.0.0-beta1")               # The IDE display version.
-set(IDE_COPYRIGHT_YEAR "2024")                        # The IDE current copyright year.
 
 set(IDE_SETTINGSVARIANT "QtProject")                  # The IDE settings variation.
 set(IDE_DISPLAY_NAME "Qt Creator")                    # The IDE display name.
@@ -9,7 +8,8 @@ set(IDE_ID "qtcreator")                               # The IDE id (no spaces, l
 set(IDE_CASED_ID "QtCreator")                         # The cased IDE id (no spaces!)
 set(IDE_BUNDLE_IDENTIFIER "org.qt-project.${IDE_ID}") # The macOS application bundle identifier.
 set(IDE_APP_ID "org.qt-project.${IDE_ID}")            # The free desktop application identifier.
-
+set(IDE_AUTHOR "The Qt Company Ltd. and other contributors.")
+set(IDE_COPYRIGHT "Copyright (C) ${IDE_AUTHOR}")
 
 set(PROJECT_USER_FILE_EXTENSION .user)
 set(IDE_DOC_FILE "qtcreator/qtcreator.qdocconf")
